Modified for the first part

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,10 +15,21 @@
 
     <body>
     <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
     <!--Add a nav bar here -->
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Home</a>
+                  <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About</a>
+            </div>
+        </div>
+    </nav>
     <!--Add a dealer table here -->
+
+
+    <footer>
+        <a href="{% url 'djangoapp:contact' %}" style="color:blue;position:absolute;bottom:0">Contact Us!</a>
+    </footer>
 
     </body>
 
