--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -10,9 +10,54 @@
     <body>
 
     <!--Add a nav bar here -->
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                  <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
+                  <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer_id%}">Add Review for dealer: {{dealer_id}}</a>
+                    <a class="btn btn-link" href="#">({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
     <!-- Add reviews as cards -->
-
+    <div class="card-columns">
+        {% for review in reviews %}
+        <div class="card">
+            {% if review.sentiment == "positive" %}
+            <img class="card-img-left" width="40" height="40" src="{{MEDIA_URL}}/emoji/positive.png"></img>
+            {% elif review.sentiment == "negative" %}
+            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png"></img>
+            {% else %}
+            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png"></img>
+            {% endif %}
+            <div class="card-body"> 
+                <h5 class="card-title">{{review.car_make}}, {{review.car_model}}</h5>
+                <h6 class="card-title">{{review.car_year}}</h5>
+                <p>{{review.review}}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
     </body>
 
 </html>
