--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -45,10 +45,38 @@
         </div>
     </nav>
     <!--Add a dealer table here -->
-
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+    </script>
+    <table class="table" id="table" data-filter-control="true">
+        <thead>
+            <tr>
+                <th data-field="id">ID</th>
+                <th data-field="name">Dealer Name</th>
+                <th data-field="city">City</th>
+                <th data-field="address">Address</th>
+                <th data-field="zip">Zip</th>
+                <th data-field="state" data-filter-control="select">State</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for dealer in dealership_list %}
+                <tr>
+                    <td>{{dealer.id}}</td>
+                    <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>
+                    <td>{{dealer.city}}</td>
+                    <td>{{dealer.address}}</td>
+                    <td>{{dealer.zip}}</td>
+                    <td>{{dealer.st}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
     <footer>
-        <a href="{% url 'djangoapp:contact' %}" style="color:blue;position:absolute;bottom:0">Contact Us!</a>
+        <a href="{% url 'djangoapp:contact' %}" style="color:blue;bottom:0">Contact Us!</a>
     </footer>
 
     </body>
